# CLearn

./: CMakeLists.txt  README.md  myfun.c  myfun.h
chapter01_variable/: CMakeLists.txt  addressPassDemo.c  boolDemo.c  charDemo.c  exercise01.c  exercise02.c  exercise03.c  floatdoubleDemo.c  forceTypeTransfer.c  hello.c  intDemo.c  intDetail.c  pointer.c  pointerExercise01.c  typeTransfer.c  varDemo01.c  varDetail.c
chapter02_constant/: CMakeLists.txt  constDemo01.c  constDemo02.c  constvsdefine01.c  constvsdefine02.c  predefineConst.c
chapter03_operator/: CMakeLists.txt  arithmeticDemo.c  arithmeticExercise01.c  arithmeticExercise02.c  assignedOperator.c  exercise.c  inputDemo.c  logicOperator.c  mulOperator.c  myExercise.c  operatorDemo.c
chapter04_processControl/: CMakeLists.txt  allExercise01.c  allExercise02.c  breakDemo.c  breakExercise02.c  continueDemo01.c  continueExercise.c  doWhileDemo.c  doWhileExercise.c  forDemo01.c  forExercise01.c  gotoDemo.c  ifDemo.c  ifelseDemo.c  ifelseExercise.c  multiForExercise01.c  multiForExercise02.c  multiIfElse.c  multiIfElse02.c  nestedIfElse.c  stars.c  switchDemo.c  switchExercise.c  whileDemo.c  whileExercise.c
chapter05_enumerate/: CMakeLists.txt  enumDemo.c  enumDemo02.c  enumSwitchDemo.c
chapter06_function/: CMakeLists.txt  funDetailExercise.c  funDetails.c  funcDemo01.c  funcExercise01.c  funcExercise01.h  funcTheory.c  multiParameterFun.c  myHello.c  quoteStarFunction.c  recursionDemo01.c  recursionExercise.c
chapter07_scope/: CMakeLists.txt
chapter07_scope/Source/: file01.c  file02.c  file03.c  file04.c  varExercise01.c  varExercise02.c  varInitDemo.c  varScope01.c
chapter08_commonFunctions/: CMakeLists.txt
chapter08_commonFunctions/src/: basicToStr.c  strFun.c  strToBasic.c  timeDemo01.c
chapter09_preprocessingCommandsAndmacroDefinitions/: CMakeLists.txt
chapter09_preprocessingCommandsAndmacroDefinitions/src/: defineDemo.c  funVsDefine.c  parameterDefine.c  preProcessDemo01.c
chapter10_array/: CMakeLists.txt
chapter10_array/src/: arrDemo02.c  arrDetail.c  arrExercise.c  arrayDemo01.c  charArrDemo01.c  charArrDemo02.c  charArrDemo03.c  charArrDemo05.c  charArrDemo4.c  multiArrDemo01.c  multiArrExercise01.c  studensScore.c
chapter10_array/test/: traverseChar.c
chapter11_sortAndSearch/: CMakeLists.txt
chapter11_sortAndSearch/src/: binarySearch.c  bubbleSort.c  searchSeq.c
chapter12_debug/: CMakeLists.txt
chapter12_debug/src/: debugDemo.c  debugDemo02.c  debugDemo03.c  debugDemo04.c
chapter13_pointer/: CMakeLists.txt
chapter13_pointer/docu/: 数组与指针区别（很全面）.txt
chapter13_pointer/src/: callbackFun.c  funPointer.c  mallocDemo.c  multiPointerDemo.c  nullPointer.c  pointerArr01.c  pointerArrCase.c  pointerCompare.c  pointerCompare02.c  pointerDemo01.c  pointerDemo02.c  pointerDemo03.c  pointerPassDemo01.c  pointerPassDemo02.c  returnPointerExercise.c  returnPointerFun.c  returnPointerFunDetail.c
chapter14_struct/: CMakeLists.txt
chapter14_struct/src/: catDemo.c  memberNotice.c  structExercise01.c  structMemberDemo02.c  visitorTicket.c
chapter15_union/: CMakeLists.txt
chapter15_union/src/: stuAndTeacher.c  unionDemo01.c
chapter16_accountSoftWare/: CMakeLists.txt
chapter16_accountSoftWare/src/: myAccount.c  myAccount2.c
