# 将该子项目下包含的内容反馈回主项目中
include_directories(.)

# 加入可执行文件
add_executable(arithmeticDemo arithmeticDemo.c)
add_executable(arithmeticExercise01 arithmeticExercise01.c)
add_executable(arithmeticExercise02 arithmeticExercise02.c)
add_executable(operatorDemo operatorDemo.c)
add_executable(logicOperator logicOperator.c)
add_executable(assignedOperator assignedOperator.c)
add_executable(mulOperator mulOperator.c)
add_executable(inputDemo inputDemo.c)
add_executable(exercise exercise.c)
add_executable(myExercise myExercise.c)