# 将该子项目下包含的内容反馈回主项目中
include_directories(.)
# 加入可执行文件
add_executable(ifDemo ifDemo.c)
add_executable(ifelseDemo ifelseDemo.c)
add_executable(ifelseExercise ifelseExercise.c)
add_executable(multiIfElse multiIfElse.c)
add_executable(multiIfElse02 multiIfElse02.c)
add_executable(nestedIfElse nestedIfElse.c)
add_executable(switchDemo switchDemo.c)
add_executable(switchExercise switchExercise.c)
add_executable(forDemo01 forDemo01.c)
add_executable(forExercise01 forExercise01.c)
add_executable(whileDemo whileDemo.c)
add_executable(whileExercise whileExercise.c)
add_executable(doWhileDemo doWhileDemo.c)
add_executable(doWhileExercise doWhileExercise.c)
add_executable(multiForExercise01 multiForExercise01.c)
add_executable(multiForExercise02 multiForExercise02.c)
add_executable(stars stars.c)
add_executable(breakDemo breakDemo.c)
add_executable(breakExercise02 breakExercise02.c)
add_executable(continueDemo01 continueDemo01.c)
add_executable(continueExercise continueExercise.c)
add_executable(gotoDemo gotoDemo.c)
add_executable(allExercise01 allExercise01.c)
add_executable(allExercise02 allExercise02.c)