include_directories(.)




add_executable(arrayDemo01 src/arrayDemo01.c)
add_executable(arrDemo02 src/arrDemo02.c)
add_executable(arrDetail src/arrDetail.c)
add_executable(arrExcise src/arrExercise.c)
add_executable(traverseChar test/traverseChar.c)
add_executable(charArrDemo01 src/charArrDemo01.c)
add_executable(charArrDemo02 src/charArrDemo02.c)
add_executable(charArrDemo03 src/charArrDemo03.c)
add_executable(charArrDemo04 src/charArrDemo4.c)
add_executable(charArrDemo05 src/charArrDemo05.c)
add_executable(multiArrDemo01 src/multiArrDemo01.c)
add_executable(multiArrExercise src/multiArrExercise01.c)
add_executable(studentScore src/studensScore.c)