include_directories(.)


add_executable(pointerDemo01 src/pointerDemo01.c)
add_executable(pointerDemo02 src/pointerDemo02.c)
add_executable(pointerDemo03 src/pointerDemo03.c)
add_executable(pointerCompare src/pointerCompare.c)
add_executable(pointerCompare02 src/pointerCompare02.c)
add_executable(pointerArr01 src/pointerArr01.c)
add_executable(pointerArrCase src/pointerArrCase.c)
add_executable(multiPointerDemo src/multiPointerDemo.c)
add_executable(pointerPassDemo01 src/pointerPassDemo01.c)
add_executable(pointerPassDemo02 src/pointerPassDemo02.c)
add_executable(returnPointerFun src/returnPointerFun.c)
add_executable(returnPointerFunDetail src/returnPointerFunDetail.c)
add_executable(returnPointerExercise src/returnPointerExercise.c)
add_executable(funPointer src/funPointer.c)
add_executable(callbackFun src/callbackFun.c)
add_executable(nullPointer src/nullPointer.c)
add_executable(mallocDemo src/mallocDemo.c)


